# beatplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  SFML_CLASSES.h  config.json  ignore.gitignore  main.cpp  state_stack.cpp  state_stack.h
assets/songs/ExampleMap/: map.json
assets/songs/ExampleMap2 - Copia (3)/: data.json
assets/songs/Ghost Fight/: data.json  map.json
assets/songs/Raise Up Your Bat/: data.json  map.json
assets/songs/Song That Might Play When You Fight Sans/: data.json  map.json
game_logic/: notes.h
game_logic/note_objects/: plate.cpp  plate.h
game_states/: game.cpp  game.h  game_state.h  menu.cpp  menu.h  song_select.cpp  song_select.h
shaders/: blur.frag  shader_manager.cpp  shader_manager.h  white_flash.frag
shaders/frag/: blur.frag  dark_out.frag  white_flash.frag
shaders/vert/: default.vert
utils/: SFML_CLASSES.h  audio_manager.h  tween_service.h  tween_storage.cpp  tween_storage.h  utilities.cpp  utilities.h
